# crystal_meshgen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/crymsh/: CMakeLists.txt  generator.cc  generator.h  triangle.cc  triangle.h
src/interface/: CMakeLists.txt  gen_cylinder.cc  interface.cc
src/mains/: CMakeLists.txt  gen_cylinder.cc
